force-app/main/default/objects/IASetIHOrg__c/IASetIHOrg__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The collection of Org-wide settings applicable to Improved Help</description>
    <label>Improved Help Org Settings</label>
</CustomObject>