force-app/main/default/objects/IASetIHOrg__c/fields/AllocatedSeats__c.field-meta.xml
<CustomField>
    <fullName>AllocatedSeats__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of Users whose accounts have been marked as allocated against an Improved Help Subscription</description>
    <inlineHelpText>The number of Users whose accounts have been marked as allocated against an Improved Help Subscription</inlineHelpText>
    <label>DEPRECATED: Allocated Seats</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>