force-app/main/default/objects/IASetIHOrg__c/fields/AllowLayoutComments__c.field-meta.xml
<CustomField>
    <fullName>AllowLayoutComments__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls the default setting for new Layouts regarding whether or not to allow comments</description>
    <inlineHelpText>Controls the default setting for new Layouts regarding whether or not to allow comments</inlineHelpText>
    <label>Allow Layout Comments</label>
    <type>Checkbox</type>
</CustomField>