force-app/main/default/objects/IASetIHOrg__c/fields/BrandColour1Text__c.field-meta.xml
<CustomField>
    <fullName>BrandColour1Text__c</fullName>
    <description>Text colour to use with Brand Colour 1</description>
    <inlineHelpText>Text colour to use with Brand Colour 1</inlineHelpText>
    <label>Brand Colour 1 Text</label>
    <length>6</length>
    <type>Text</type>
</CustomField>