force-app/main/default/objects/IASetIHOrg__c/fields/BrandColour3__c.field-meta.xml
<CustomField>
    <fullName>BrandColour3__c</fullName>
    <description>6-character HEX code (without &quot;#&quot;) defining a key branding colour for the Helped Org</description>
    <inlineHelpText>6-character HEX code (without &quot;#&quot;) defining a key branding colour for the Helped Org</inlineHelpText>
    <label>Brand Colour 3</label>
    <length>6</length>
    <type>Text</type>
</CustomField>