force-app/main/default/objects/IASetIHOrg__c/fields/BrandCSS__c.field-meta.xml
<CustomField>
    <fullName>BrandCSS__c</fullName>
    <defaultValue>&quot;http://&quot;</defaultValue>
    <description>Stylesheet to use as the source of Improved Help customer-specific style overrides</description>
    <inlineHelpText>Stylesheet to use as the source of Improved Help customer-specific style overrides</inlineHelpText>
    <label>Brand CSS</label>
    <required>true</required>
    <type>Url</type>
</CustomField>