force-app/main/default/objects/IASetIHOrg__c/fields/BrandIHTooltip__c.field-meta.xml
<CustomField>
    <fullName>BrandIHTooltip__c</fullName>
    <description>Tool tip to display when users hover over Helped Elements</description>
    <inlineHelpText>Tool tip to display when users hover over Helped Elements</inlineHelpText>
    <label>DEPRECATED: Brand IH Tooltip</label>
    <length>40</length>
    <type>Text</type>
</CustomField>