force-app/main/default/objects/IASetIHOrg__c/fields/BrandImage__c.field-meta.xml
<CustomField>
    <fullName>BrandImage__c</fullName>
    <defaultValue>&quot;/resource/iahelp__IHResources/img/LogoToolsPage.svg&quot;</defaultValue>
    <description>Logo to feature at the top of Help detail pages.</description>
    <inlineHelpText>Logo to feature at the top of Help detail pages.</inlineHelpText>
    <label>Brand Image</label>
    <required>true</required>
    <type>Url</type>
</CustomField>