force-app/main/default/objects/IASetIHOrg__c/fields/BrandSubTitle__c.field-meta.xml
<CustomField>
    <fullName>BrandSubTitle__c</fullName>
    <defaultValue>&quot;The digital adoption platform for Salesforce&quot;</defaultValue>
    <description>Branding strapline to feature at the top of Help detail pages, beneath the main Brand Title</description>
    <inlineHelpText>Branding strapline to feature at the top of Help detail pages, beneath the main Brand Title</inlineHelpText>
    <label>Brand Sub Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>