force-app/main/default/objects/IASetIHOrg__c/fields/BrandTitle__c.field-meta.xml
<CustomField>
    <fullName>BrandTitle__c</fullName>
    <defaultValue>&quot;Unaric&quot;</defaultValue>
    <description>Branding text to feature at the top of Help detail pages</description>
    <inlineHelpText>Branding text to feature at the top of Help detail pages</inlineHelpText>
    <label>Brand Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>