force-app/main/default/objects/IASetIHOrg__c/fields/BrandUXOption__c.field-meta.xml
<CustomField>
    <fullName>BrandUXOption__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <description>Controls user interface appearance (e.g., Lightning or Classic flavour) in certain cases</description>
    <inlineHelpText>Controls user interface appearance (e.g., Lightning or Classic flavour) in certain cases</inlineHelpText>
    <label>Brand UX Option</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>