force-app/main/default/objects/IASetIHOrg__c/fields/CalloutClosureBehaviour__c.field-meta.xml
<CustomField>
    <fullName>CalloutClosureBehaviour__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <description>Defines the behaviour of Help Callouts as regards how they can be closed after opening</description>
    <inlineHelpText>Defines the behaviour of Help Callouts as regards how they can be closed after opening</inlineHelpText>
    <label>Callout Closure Behaviour</label>
    <length>1</length>
    <type>Text</type>
</CustomField>