force-app/main/default/objects/IASetIHOrg__c/fields/CalloutWidth__c.field-meta.xml
<CustomField>
    <fullName>CalloutWidth__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Percentage width at which to display certain Improved Help callouts</description>
    <inlineHelpText>Percentage width at which to display certain Improved Help callouts</inlineHelpText>
    <label>Callout Width (%)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>