force-app/main/default/objects/IASetIHOrg__c/fields/ConsoleResourceLinkTarget__c.field-meta.xml
<CustomField>
    <fullName>ConsoleResourceLinkTarget__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <description>When viewing Improved Help via a Console page, controls the target of Resource links</description>
    <inlineHelpText>When viewing Improved Help via a Console page, controls the target of Resource links</inlineHelpText>
    <label>Console Resource Link Target</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>