force-app/main/default/objects/IASetIHOrg__c/fields/CustomStyles__c.field-meta.xml
<CustomField>
    <fullName>CustomStyles__c</fullName>
    <description>Comma separated list of CSS style names that can be applied to Help Topics</description>
    <inlineHelpText>Comma separated list of CSS style names that can be applied to Help Topics</inlineHelpText>
    <label>Custom Styles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>