force-app/main/default/objects/IASetIHOrg__c/fields/DebugMode__c.field-meta.xml
<CustomField>
    <fullName>DebugMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provides access to certain diagnostic facilities and messages</description>
    <inlineHelpText>Provides access to certain diagnostic facilities and messages</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>