force-app/main/default/objects/IASetIHOrg__c/fields/DefaultGuideTemplate__c.field-meta.xml
<CustomField>
    <fullName>DefaultGuideTemplate__c</fullName>
    <description>The Help Topic Template to use by default when adding new Help Topics for use in a Guide</description>
    <inlineHelpText>The Help Topic Template to use by default when adding new Help Topics for use in a Guide</inlineHelpText>
    <label>DEPRECATED: Default Guide Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>