force-app/main/default/objects/IASetIHOrg__c/fields/DefaultHelpActiveStatus__c.field-meta.xml
<CustomField>
    <fullName>DefaultHelpActiveStatus__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The default status (active or inactive) to use when adding new Help Topics in Configuration Mode</description>
    <inlineHelpText>The default status (active or inactive) to use when adding new Help Topics in Configuration Mode</inlineHelpText>
    <label>Default Help Active Status</label>
    <type>Checkbox</type>
</CustomField>