force-app/main/default/objects/IASetIHOrg__c/fields/DefaultHelpCalloutTemplate__c.field-meta.xml
<CustomField>
    <fullName>DefaultHelpCalloutTemplate__c</fullName>
    <description>The Help Topic Callout Template to use by default when adding new Help Topics in Configuration Mode</description>
    <inlineHelpText>The Help Topic Callout Template to use by default when adding new Help Topics in Configuration Mode</inlineHelpText>
    <label>Default Help Callout Template</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>