force-app/main/default/objects/IASetIHOrg__c/fields/DefaultHelpTopic__c.field-meta.xml
<CustomField>
    <fullName>DefaultHelpTopic__c</fullName>
    <description>ID of the Help Topic to be used as a default when requested record is unavailable or unspecified</description>
    <inlineHelpText>ID of the Help Topic to be used as a default when requested record is unavailable or unspecified</inlineHelpText>
    <label>Default Help Topic</label>
    <length>20</length>
    <type>Text</type>
</CustomField>