force-app/main/default/objects/IASetIHOrg__c/fields/DefaultHelpTopicHBS__c.field-meta.xml
<CustomField>
    <fullName>DefaultHelpTopicHBS__c</fullName>
    <defaultValue>400</defaultValue>
    <description>The default value to use for Height Before Scrolling when adding new Help Topics in Configuration Mode</description>
    <inlineHelpText>The default value to use for Height Before Scrolling when adding new Help Topics in Configuration Mode</inlineHelpText>
    <label>Default Height Before Scrolling</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>