force-app/main/default/objects/IASetIHOrg__c/fields/DefaultHelpTopicTemplate__c.field-meta.xml
<CustomField>
    <fullName>DefaultHelpTopicTemplate__c</fullName>
    <description>The Help Topic Template to use by default when adding new Help Topics in Configuration Mode</description>
    <inlineHelpText>The Help Topic Template to use by default when adding new Help Topics in Configuration Mode</inlineHelpText>
    <label>Default Help Topic Template</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>