force-app/main/default/objects/IASetIHOrg__c/fields/DefaultHelpTopicTreeProvider__c.field-meta.xml
<CustomField>
    <fullName>DefaultHelpTopicTreeProvider__c</fullName>
    <defaultValue>&quot;ServiceIHTrees.TNSHelpTopics&quot;</defaultValue>
    <description>Sets the Tree Provider implementation that will be used by default when presenting Trees of Help Topic records</description>
    <inlineHelpText>Sets the Tree Provider implementation that will be used by default when presenting Trees of Help Topic records</inlineHelpText>
    <label>Default Help Topic Tree Provider</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>