force-app/main/default/objects/IASetIHOrg__c/fields/DefaultReadMoreOption__c.field-meta.xml
<CustomField>
    <fullName>DefaultReadMoreOption__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines whether or not to show &quot;Read More&quot; links by default in callouts for new Help Topics</description>
    <inlineHelpText>Defines whether or not to show &quot;Read More&quot; links by default in callouts for new Help Topics</inlineHelpText>
    <label>Default Read More Option</label>
    <type>Checkbox</type>
</CustomField>