force-app/main/default/objects/IASetIHOrg__c/fields/DefaultRelationshipSemanticTag__c.field-meta.xml
<CustomField>
    <fullName>DefaultRelationshipSemanticTag__c</fullName>
    <description>The default semantic tag to apply to Help Topic Relationships</description>
    <inlineHelpText>The default semantic tag to apply to Help Topic Relationships</inlineHelpText>
    <label>Default Relationship Semantic Tag</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>