force-app/main/default/objects/IASetIHOrg__c/fields/DefaultVisibility__c.field-meta.xml
<CustomField>
    <fullName>DefaultVisibility__c</fullName>
    <description>Defines the default setting for sharing rules-based visibility of individual help topic records</description>
    <inlineHelpText>Defines the default setting for sharing rules-based visibility of individual help topic records</inlineHelpText>
    <label>Default Visibility</label>
    <length>30</length>
    <type>Text</type>
</CustomField>