force-app/main/default/objects/IASetIHOrg__c/fields/DefaultVoteSet__c.field-meta.xml
<CustomField>
    <fullName>DefaultVoteSet__c</fullName>
    <label>Default Vote Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>