force-app/main/default/objects/IASetIHOrg__c/fields/DocumentationInstallationDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentationInstallationDate__c</fullName>
    <description>The date upon which Improved Help documentation was last (re)installed</description>
    <inlineHelpText>The date upon which Improved Help documentation was last (re)installed</inlineHelpText>
    <label>Documentation Installation Date</label>
    <type>DateTime</type>
</CustomField>