force-app/main/default/objects/IASetIHOrg__c/fields/DocumentationVersion__c.field-meta.xml
<CustomField>
    <fullName>DocumentationVersion__c</fullName>
    <description>The version of Improved Help documentation last installed</description>
    <inlineHelpText>The version of Improved Help documentation last installed</inlineHelpText>
    <label>Documentation Version</label>
    <length>15</length>
    <type>Text</type>
</CustomField>