force-app/main/default/objects/IASetIHOrg__c/fields/DoLoginChecks__c.field-meta.xml
<CustomField>
    <fullName>DoLoginChecks__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether or not login checks are performed prior to attempting certain operations, such as opening callouts</description>
    <inlineHelpText>Controls whether or not login checks are performed prior to attempting certain operations, such as opening callouts</inlineHelpText>
    <label>Do Login Checks</label>
    <type>Checkbox</type>
</CustomField>