force-app/main/default/objects/IASetIHOrg__c/fields/EnableExportDocHT__c.field-meta.xml
<CustomField>
    <fullName>EnableExportDocHT__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check to allow experimental &quot;Export Topics to Word&quot; feature</description>
    <inlineHelpText>Check to allow experimental &quot;Export Topics to Word&quot; feature</inlineHelpText>
    <label>Enable Export to Word (Topics)</label>
    <type>Checkbox</type>
</CustomField>