force-app/main/default/objects/IASetIHOrg__c/fields/EnableExportDocRL__c.field-meta.xml
<CustomField>
    <fullName>EnableExportDocRL__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check to allow experimental &quot;Export Reading List to Word&quot; feature</description>
    <inlineHelpText>Check to allow experimental &quot;Export Reading List to Word&quot; feature</inlineHelpText>
    <label>Enable Export to Word (RLs)</label>
    <type>Checkbox</type>
</CustomField>