force-app/main/default/objects/IASetIHOrg__c/fields/EnableExportXL__c.field-meta.xml
<CustomField>
    <fullName>EnableExportXL__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check to allow experimental &quot;Export to Excel&quot; feature</description>
    <inlineHelpText>Check to allow experimental &quot;Export to Excel&quot; feature</inlineHelpText>
    <label>Enable Export to Excel</label>
    <type>Checkbox</type>
</CustomField>