force-app/main/default/objects/IASetIHOrg__c/fields/EnableImprovedButtonHelp__c.field-meta.xml
<CustomField>
    <fullName>EnableImprovedButtonHelp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to show Improved Help for standard and custom Buttons</description>
    <inlineHelpText>Check this box to show Improved Help for standard and custom Buttons</inlineHelpText>
    <label>Enable Improved Button Help</label>
    <type>Checkbox</type>
</CustomField>