force-app/main/default/objects/IASetIHOrg__c/fields/EnableImprovedDetailsHelp__c.field-meta.xml
<CustomField>
    <fullName>EnableImprovedDetailsHelp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to show Improved Help for Details</description>
    <inlineHelpText>Check this box to show Improved Help for Details</inlineHelpText>
    <label>Enable Improved Details Help</label>
    <type>Checkbox</type>
</CustomField>