force-app/main/default/objects/IASetIHOrg__c/fields/EnableImprovedFieldHelp__c.field-meta.xml
<CustomField>
    <fullName>EnableImprovedFieldHelp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to show Improved Help for individual Object Fields</description>
    <inlineHelpText>Check this box to show Improved Help for Individual Object Fields</inlineHelpText>
    <label>Enable Improved Field Help</label>
    <type>Checkbox</type>
</CustomField>