force-app/main/default/objects/IASetIHOrg__c/fields/EnableImprovedLinkHelp__c.field-meta.xml
<CustomField>
    <fullName>EnableImprovedLinkHelp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to show Improved Help for custom Links</description>
    <inlineHelpText>Check this box to show Improved Help for custom Links</inlineHelpText>
    <label>Enable Improved Link Help</label>
    <type>Checkbox</type>
</CustomField>