force-app/main/default/objects/IASetIHOrg__c/fields/EnableImprovedObjectHelp__c.field-meta.xml
<CustomField>
    <fullName>EnableImprovedObjectHelp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to show Improved Help for Objects</description>
    <inlineHelpText>Check this box to show Improved Help for Objects</inlineHelpText>
    <label>Enable Improved Object Help</label>
    <type>Checkbox</type>
</CustomField>