force-app/main/default/objects/IASetIHOrg__c/fields/EnableImprovedPageHelp__c.field-meta.xml
<CustomField>
    <fullName>EnableImprovedPageHelp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to replace the default SalesForce page-level help with Improved Help</description>
    <inlineHelpText>Check this box to replace the default SalesForce page-level help with Improved Help</inlineHelpText>
    <label>Enable Improved Page Help</label>
    <type>Checkbox</type>
</CustomField>