force-app/main/default/objects/IASetIHOrg__c/fields/EnableImprovedRecordTitleHelp__c.field-meta.xml
<CustomField>
    <fullName>EnableImprovedRecordTitleHelp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to show Improved Help for record titles</description>
    <inlineHelpText>Check this box to show Improved Help for record titles</inlineHelpText>
    <label>Enable Improved Record Title Help</label>
    <type>Checkbox</type>
</CustomField>