force-app/main/default/objects/IASetIHOrg__c/fields/EnableImprovedRelatedListHelp__c.field-meta.xml
<CustomField>
    <fullName>EnableImprovedRelatedListHelp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to show Improved Help for Related Lists</description>
    <inlineHelpText>Check this box to show Improved Help for Related Lists</inlineHelpText>
    <label>Enable Improved Related List Help</label>
    <type>Checkbox</type>
</CustomField>