force-app/main/default/objects/IASetIHOrg__c/fields/EnableImprovedSectionHelp__c.field-meta.xml
<CustomField>
    <fullName>EnableImprovedSectionHelp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to show Improved Help for Custom Section Heading Labels</description>
    <inlineHelpText>Check this box to show Improved Help for Custom Section Heading Labels</inlineHelpText>
    <label>Enable Improved Custom Section Help</label>
    <type>Checkbox</type>
</CustomField>