force-app/main/default/objects/IASetIHOrg__c/fields/EnableImprovedTableHelp__c.field-meta.xml
<CustomField>
    <fullName>EnableImprovedTableHelp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to show Improved Help for Tables</description>
    <inlineHelpText>Check this box to show Improved Help for Tables</inlineHelpText>
    <label>Enable Improved Table Help</label>
    <type>Checkbox</type>
</CustomField>