force-app/main/default/objects/IASetIHOrg__c/fields/Geo_EnableHighAccuracy__c.field-meta.xml
<CustomField>
    <fullName>Geo_EnableHighAccuracy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the application would like to receive the best possible results. If true and if the device is able to provide a more accurate position, it will do so. Note that this can result in slower response times or increased power consumption (with a GPS chip on a mobile device for example). On the other hand, if false, the device can take the liberty to save resources by responding more quickly and/or using less power. Default: false.</description>
    <label>Geo EnableHighAccuracy</label>
    <type>Checkbox</type>
</CustomField>