force-app/main/default/objects/IASetIHOrg__c/fields/Geo_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Geo_Timeout__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Log Help Interactions when GeoLocation data is unavailable</description>
    <label>Geo Timeout</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>