force-app/main/default/objects/IASetIHOrg__c/fields/ImageUploadFolder__c.field-meta.xml
<CustomField>
    <fullName>ImageUploadFolder__c</fullName>
    <description>ID of the Document Folder to use when uploading images for Help Topics</description>
    <inlineHelpText>ID of the Document Folder to use when uploading images for Help Topics</inlineHelpText>
    <label>Image Upload Folder</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>