force-app/main/default/objects/IASetIHOrg__c/fields/jQNCMode__c.field-meta.xml
<CustomField>
    <fullName>jQNCMode__c</fullName>
    <description>Controls the use of jQuery nonConflict throughout Improved Help</description>
    <inlineHelpText>Controls the use of jQuery nonConflict throughout Improved Help</inlineHelpText>
    <label>jQNCMode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>