force-app/main/default/objects/IASetIHOrg__c/fields/Location_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Location_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This enables Geolocation tracking.</description>
    <label>Location Tracking</label>
    <type>Checkbox</type>
</CustomField>