force-app/main/default/objects/IASetIHOrg__c/fields/QuickLink3__c.field-meta.xml
<CustomField>
    <fullName>QuickLink3__c</fullName>
    <description>Hyperlink to feature on Help details pages</description>
    <inlineHelpText>Hyperlink to feature on Help details pages</inlineHelpText>
    <label>Quick Link 3</label>
    <type>Url</type>
</CustomField>