force-app/main/default/objects/IASetIHOrg__c/fields/QuickText1__c.field-meta.xml
<CustomField>
    <fullName>QuickText1__c</fullName>
    <description>Link text for hyperlink</description>
    <label>Quick Text 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>