force-app/main/default/objects/IASetIHOrg__c/fields/QuickText3__c.field-meta.xml
<CustomField>
    <fullName>QuickText3__c</fullName>
    <description>Link text for hyperlink</description>
    <inlineHelpText>Link text for hyperlink</inlineHelpText>
    <label>Quick Text 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>