force-app/main/default/objects/IASetIHOrg__c/fields/QuickTip1__c.field-meta.xml
<CustomField>
    <fullName>QuickTip1__c</fullName>
    <description>Tool tip for hyperlink</description>
    <inlineHelpText>Tool tip for hyperlink</inlineHelpText>
    <label>Quick Tip 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>