force-app/main/default/objects/IASetIHOrg__c/fields/QuickTip2__c.field-meta.xml
<CustomField>
    <fullName>QuickTip2__c</fullName>
    <description>Tool tip for hyperlink</description>
    <inlineHelpText>Tool tip for hyperlink</inlineHelpText>
    <label>Quick Tip 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>