force-app/main/default/objects/IASetIHOrg__c/fields/RaisePlatformEvents__c.field-meta.xml
<CustomField>
    <fullName>RaisePlatformEvents__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether or not platform events are raised as users interact with Help in certain circumstances.</description>
    <inlineHelpText>Controls whether or not platform events are raised as users interact with Help in certain circumstances.</inlineHelpText>
    <label>RaisePlatformEvents</label>
    <type>Checkbox</type>
</CustomField>