force-app/main/default/objects/IASetIHOrg__c/fields/ReviewWithinDays__c.field-meta.xml
<CustomField>
    <fullName>ReviewWithinDays__c</fullName>
    <defaultValue>90</defaultValue>
    <description>The interval in days at which Help Topics should have their content reviewed for ongoing accuracy</description>
    <inlineHelpText>The interval in days at which Help Topics should have their content reviewed for ongoing accuracy</inlineHelpText>
    <label>ReviewWithinDays</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>