force-app/main/default/objects/IASetIHOrg__c/fields/RLShowNextPrev__c.field-meta.xml
<CustomField>
    <fullName>RLShowNextPrev__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether or not the Next / Previous links will be rendered as part of the Reading List navigation bar</description>
    <inlineHelpText>Controls whether or not the Next / Previous links will be rendered as part of the Reading List navigation bar</inlineHelpText>
    <label>Show Next/Previous Links</label>
    <type>Checkbox</type>
</CustomField>