force-app/main/default/objects/IASetIHOrg__c/fields/SFObjectIds__c.field-meta.xml
<CustomField>
    <fullName>SFObjectIds__c</fullName>
    <description>Capek (^) separated list of the 3 character Salesforce codes representing key Improved Help objects</description>
    <inlineHelpText>Capek (^) separated list of the 3 character Salesforce codes representing key Improved Help objects</inlineHelpText>
    <label>SF Object Ids</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>