force-app/main/default/objects/IASetIHOrg__c/fields/SFPod__c.field-meta.xml
<CustomField>
    <fullName>SFPod__c</fullName>
    <description>The name of the server pod hosting the Org&apos;s SF and VF pages</description>
    <inlineHelpText>The name of the server pod hosting the Org&apos;s SF and VF pages</inlineHelpText>
    <label>SFPod</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>