force-app/main/default/objects/IASetIHOrg__c/fields/ShowGuidesLinks__c.field-meta.xml
<CustomField>
    <fullName>ShowGuidesLinks__c</fullName>
    <description>Controls which, if any, on-page links will be displayed for available Guides</description>
    <inlineHelpText>Controls which, if any, on-page links will be displayed for available Guides</inlineHelpText>
    <label>Show Guides Links</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>