force-app/main/default/objects/IASetIHOrg__c/fields/ShowReferringTopics__c.field-meta.xml
<CustomField>
    <fullName>ShowReferringTopics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, portal will always show Topics that refer TO the current one in the Related Help Topics listing</description>
    <inlineHelpText>If checked, portal will always show Topics that refer TO the current one in the Related Help Topics listing</inlineHelpText>
    <label>Show Referring Topics</label>
    <type>Checkbox</type>
</CustomField>