force-app/main/default/objects/IASetIHOrg__c/fields/TrackDaysCallouts__c.field-meta.xml
<CustomField>
    <fullName>TrackDaysCallouts__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days of log data to retain for help callout views</description>
    <inlineHelpText>The number of days of log data to retain for help callout views</inlineHelpText>
    <label>Track Days Callouts</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>