force-app/main/default/objects/IASetIHOrg__c/fields/TrackDaysComments__c.field-meta.xml
<CustomField>
    <fullName>TrackDaysComments__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days to retain comments on Help Topics</description>
    <inlineHelpText>The number of days to retain comments on Help Topics</inlineHelpText>
    <label>Track Days Comments</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>