force-app/main/default/objects/IASetIHOrg__c/fields/TrackDaysErrors__c.field-meta.xml
<CustomField>
    <fullName>TrackDaysErrors__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days to retain help configuration error records</description>
    <inlineHelpText>The number of days to retain help configuration error records</inlineHelpText>
    <label>Track Days Errors</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>