force-app/main/default/objects/IASetIHOrg__c/fields/TrackDaysLUXOps__c.field-meta.xml
<CustomField>
    <fullName>TrackDaysLUXOps__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days to retain records of Lightning QAM Drags, List selections/expansion, Stickies etc.</description>
    <inlineHelpText>The number of days to retain records of Lightning QAM Drags, List selections/expansion, Stickies etc.</inlineHelpText>
    <label>Track Days LUX Ops</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>