force-app/main/default/objects/IASetIHOrg__c/fields/TrackDaysResources__c.field-meta.xml
<CustomField>
    <fullName>TrackDaysResources__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days to retain records of use of Help Resources</description>
    <inlineHelpText>The number of days to retain records of use of Help Resources</inlineHelpText>
    <label>Track Days Resources</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>