force-app/main/default/objects/IASetIHOrg__c/fields/TrackDaysSearches__c.field-meta.xml
<CustomField>
    <fullName>TrackDaysSearches__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days to retain records of user searches</description>
    <inlineHelpText>The number of days to retain records of user searches</inlineHelpText>
    <label>Track Days Searches</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>