force-app/main/default/objects/IASetIHOrg__c/fields/TrackDaysTopics__c.field-meta.xml
<CustomField>
    <fullName>TrackDaysTopics__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days of log data to retain for help topic full views</description>
    <inlineHelpText>The number of days of log data to retain for help topic full views</inlineHelpText>
    <label>Track Days Topics</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>