force-app/main/default/objects/IASetIHOrg__c/fields/TrackDaysVotes__c.field-meta.xml
<CustomField>
    <fullName>TrackDaysVotes__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days to retain records of Votes</description>
    <inlineHelpText>The number of days to retain records of Votes</inlineHelpText>
    <label>Track Days Votes</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>